--- a/index.el.html
+++ b/index.el.html
@@ -98,7 +98,7 @@
                                 <li><a href="#section-topics">Κανονισμοί</a></li>
                                 <li><a href="#section-accommodation">Κατηγορίες</a></li>
                                 <li><a href="#section-age">Ηλικιες</a></li>
-                                <li><a href="#section-booklet">Ασφάλεια</a></li>
+                                <li><a href="#section-booklet">Ασφαλεια</a></li>
                                 <li><a href="#section-photos">Φωτογραφίες</a></li>
                             </ul>
                         </li>
@@ -127,33 +127,35 @@
             </div>
 
 
-            <!-- /.container -->
-            <div class="search-form-wrapper">
-                <form class="search-form" id="" action="">
-                    <div class="input-group">
-                                 <span class="input-group-addon search-close" id="basic-addon2"><i
-                                         class="fa fa-window-close" aria-hidden="true"></i>
-                                </span>
-                        <span class="cont-control-cse">
-                              <script>
-                              (function () {
-                                  var cx = '008299684814490361202:lf-mmngkyec';
-                                  var gcse = document.createElement('script');
-                                  gcse.type = 'text/javascript';
-                                  gcse.async = true;
-                                  gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-                                  var s = document.getElementsByTagName('script')[0];
-                                  s.parentNode.insertBefore(gcse, s);
-                              })();
-                            </script>
-                            <gcse:search></gcse:search>
-                         </span>
+            <!--&lt;!&ndash; /.container &ndash;&gt;-->
+            <!--<div class="search-form-wrapper">-->
+                <!--<form class="search-form" id="" action="">-->
+                    <!--<div class="input-group">-->
+                                 <!--<span class="input-group-addon search-close" id="basic-addon2"><i-->
+                                         <!--class="fa fa-window-close" aria-hidden="true"></i>-->
+                                <!--</span>-->
+                        <!--<span class="cont-control-cse">-->
+                              <!--<script>-->
+                              <!--(function () {-->
+                                  <!--var cx = '008299684814490361202:lf-mmngkyec';-->
+                                  <!--var gcse = document.createElement('script');-->
+                                  <!--gcse.type = 'text/javascript';-->
+                                  <!--gcse.async = true;-->
+                                  <!--gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;-->
+                                  <!--var s = document.getElementsByTagName('script')[0];-->
+                                  <!--s.parentNode.insertBefore(gcse, s);-->
+                              <!--})();-->
+                            <!--</script>-->
+                            <!--<gcse:search></gcse:search>-->
+                         <!--</span>-->
 
-                    </div>
-                </form>
-            </div>
+                    <!--</div>-->
+                <!--</form>-->
+            <!--</div>-->
         </nav>
 
+    </header></div>
+    </header>
         <!-- .nav -->
 
     </header>
@@ -1403,7 +1405,7 @@
         <!--</div>-->
     <!--</section>-->
 
-    <footer class="footer yellow-bg">
+    <footer class="footer ">
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
