--- a/index.en.html
+++ b/index.en.html
@@ -1733,7 +1733,7 @@
         </div>
     </section>
 
-    <footer class="footer yellow-bg">
+    <footer class="footer >
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
