--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <!--</li>-->
                             <!--</ul>-->
                         <!--</li>-->
-                        <li><a class="dropdown-toggle" data-toggle="dropdown">Συμμετοχή<b class="caret"></b></a>
+                        <li><a class="dropdown-toggle" data-toggle="dropdown">Συμμετοχη<b class="caret"></b></a>
                             <ul class="dropdown-menu text-center">
                                 <li><a href="#section-accommodation">Κατηγορίες</a></li>
                                 <li><a href="#section-age">Ηλικιες</a></li>
@@ -104,8 +104,8 @@
 
 
                         <li><a href="#section-program">ΠΡΟΓΡΑΜΜΑ</a></li>
-                        <li><a href="#section-photos">Φωτογραφίες</a></li>
-                        <li><a class="" href="#section-archive">Οργάνωση</a></li>
+                        <li><a href="#section-photos">Φωτογραφιες</a></li>
+                        <li><a class="" href="#section-archive">Οργανωση</a></li>
 
                         <li><a class="" href="#section-contact"><span class="fa fa-at"
                                                                       aria-hidden="true"></span></a></li>
@@ -729,13 +729,13 @@
 
                 <div class="col-md-12 text-center">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOBd4ppIhfVMcCSUPtAE1_6___onTwqqpnTcf1qffOY0R4FA/viewform?usp=sf_link" target="_blank"
-                       class="btn btn-primary">Εγγραφή</a>
+                       class="btn btn-primary">Εγγραφη</a>
                     <!--<p><b class="text-danger">Online registration is now closed.</b></p>-->
                     <p>[Μέσω του πιο πάνω συνδέσμου θα μπορέσετε να εγγραφείτε στο  <strong> ΠΡΩΤΑΘΛΗΜΑ </strong>.
 
                         Η επικύρωση της συμμέτοχης στην κλήρωση του πρωταθλήματος θα γίνει από τους διοργανωτές μέχρι την Πέμπτη 16 Μαΐου 2019.
                         Η καταβολή του αντίστοιχου αντιτίμου θα γίνει στο χώρο διεξαγωγής του Πρωταθλήματος κατά την μέρα διεξαγωγής του.
-                        ]
+
                     </p>
 
                 </div>
@@ -1078,7 +1078,7 @@
             <br>
             <div class="text-center">
                 <a href=""
-                   target="_blank" type="button" class="btn btn-danger">Όλες οι Φωτογραφίες</a>
+                   target="_blank" type="button" class="btn btn-danger">ολες οι Φωτογραφιες</a>
             </div>
         </div>
     </section>
