--- a/index.html
+++ b/index.html
@@ -483,9 +483,25 @@
                             <li>
                                 <b>Καταληκτική ημερομηνία ηλεκτρονικής εγγραφής:</b> <font color="red"><b>Τρίτη, 14 Μαΐου 2019</b></font>.
                             </li>
-                            <li><b>Επικύρωση της συμμέτοχης στην κλήρωση του πρωταθλήματος: <font color="red"><b>Τετάρτη, 15 Μαΐου 2019</b></font></b>.  Παρακαλώ επικοινωνήστε με την οργανωτική επιτροπή μέχρι την Πέμπτη 17 Μαΐου 2019 σε περίπτωση που δεν λάβετε επιβεβαίωση συμμετοχής.
-                                <li>Η καταβολή του αντίστοιχου αντιτίμου, o ηλικιακός έλεγχος και η υπογραφή του έντυπου συμμετοχής στη διοργάνωση θα γίνει στο χώρο διεξαγωγής του Πρωταθλήματος κατά την μέρα διεξαγωγής του. Τα έσοδα θα διατεθούν για κάλυψη των εξόδων της διοργάνωσης.
-                                </li>
+                            <li><b>Επιβεβαίωση Συμμετοχής: <font color="red"><b>Τετάρτη, 15 Μαΐου 2019</b></font></b>.(Παρακαλώ επικοινωνήστε με την οργανωτική επιτροπή μέχρι την ημερομηνία αυτή σε περίπτωση που δεν λάβετε επιβεβαίωση συμμετοχής.)
+
+                            </li>
+                            <li>
+
+                                <b> Κλήρωση και Ανάρτηση Προγράμματος:</b> Πέμπτη, 16 Μαΐου 2019.
+                            </li>
+                            <li>
+
+                                <b> Έναρξη Πρωταθλήματος:</b> Σάββατο, 18 Μαΐου, 2019
+                            </li>
+                            <li>
+
+                               <b> Λήξη Πρωταθλήματος: </b>Κυριακή, 26 Μαΐου, 2019
+                            </li>
+
+                            <li>Η καταβολή του αντίστοιχου αντιτίμου, o ηλικιακός έλεγχος και η υπογραφή του έντυπου συμμετοχής στη διοργάνωση θα γίνει στο χώρο διεξαγωγής του Πρωταθλήματος κατά την μέρα διεξαγωγής του. Τα έσοδα θα διατεθούν για κάλυψη των εξόδων της διοργάνωσης.
+                            </li>
+
                                 <li>Παρακαλώ μελετήστε τους όρους της διοργάνωσης στη σελίδα αυτή προτού ολοκληρώσετε την εγγραφή σας.
                                 </li>
                                 </ul>
