new version by dzeina

--- a/program.el.html
+++ b/program.el.html
@@ -152,7 +152,7 @@
                                 <span class="fa fa-caret-down"></span>
                             </a>
                             <div class="collapse" id="ds">
-                                <p> Η κλήρωση των αγώνων θα γίνει την Πέμπτη 16  Μαΐου 2019 και θα αναρτηθεί στην ιστοσελίδα μαζί με
+                                <p> Η κλήρωση των αγώνων θα γίνει την Τετάρτη 15 Μαΐου 2019 και θα αναρτηθεί στην ιστοσελίδα μαζί με
                                     το πρόγραμμα των αγώνων.
                                     Το πρόγραμμα των αγώνων θα ανανεώνεται στο τέλος κάθε αγωνιστικής μέρας, σύμφωνα με τα αποτελέσματα
                                     που θα προκύπτουν από τους αγώνες που θα διεξάγονται.</p>
